; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_s626.c_LoadTrimDACs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_s626.c_LoadTrimDACs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i32 }

@trimchan = common dso_local global i32 0, align 4
@trimadrs = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.comedi_device*)* @LoadTrimDACs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @LoadTrimDACs(%struct.comedi_device* %0) #0 {
  %2 = alloca %struct.comedi_device*, align 8
  %3 = alloca i64, align 8
  store %struct.comedi_device* %0, %struct.comedi_device** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %19, %1
  %5 = load i64, i64* %3, align 8
  %6 = load i32, i32* @trimchan, align 4
  %7 = call i64 @ARRAY_SIZE(i32 %6)
  %8 = icmp ult i64 %5, %7
  br i1 %8, label %9, label %22

9:                                                ; preds = %4
  %10 = load %struct.comedi_device*, %struct.comedi_device** %2, align 8
  %11 = load i64, i64* %3, align 8
  %12 = load %struct.comedi_device*, %struct.comedi_device** %2, align 8
  %13 = load i32*, i32** @trimadrs, align 8
  %14 = load i64, i64* %3, align 8
  %15 = getelementptr inbounds i32, i32* %13, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @I2Cread(%struct.comedi_device* %12, i32 %16)
  %18 = call i32 @WriteTrimDAC(%struct.comedi_device* %10, i64 %11, i32 %17)
  br label %19

19:                                               ; preds = %9
  %20 = load i64, i64* %3, align 8
  %21 = add i64 %20, 1
  store i64 %21, i64* %3, align 8
  br label %4

22:                                               ; preds = %4
  ret void
}

declare dso_local i64 @ARRAY_SIZE(i32) #1

declare dso_local i32 @WriteTrimDAC(%struct.comedi_device*, i64, i32) #1

declare dso_local i32 @I2Cread(%struct.comedi_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
